--- a/public/index.html
+++ b/public/index.html
@@ -1,6 +1,11 @@
-HELLO!
+<!doctype html>
+<html>
+  <head>
+    <script src="https://kit.fontawesome.com/3b773c96ce.js" crossorigin="anonymous"></script>
+  </head>
 
-<div id="booking"></div>
-
-
-<script src="./bundle.js"></script>
+  <body>
+    <div id="booking"></div>
+    <script src="./bundle.js"></script>
+  </body>
+</html>
