--- a/public/index.html
+++ b/public/index.html
@@ -1,6 +1,7 @@
 <!doctype html>
 <html>
   <head>
+    <title>Booking</title>
     <script src="https://kit.fontawesome.com/3b773c96ce.js" crossorigin="anonymous"></script>
   </head>
 
