--- a/public/index.html
+++ b/public/index.html
@@ -2,6 +2,9 @@
 <html>
   <head>
     <title>Booking</title>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <script src="https://kit.fontawesome.com/3b773c96ce.js" crossorigin="anonymous"></script>
   </head>
 
